src - MTDEV2/objects/MT_ForecastValue__c.object
<CustomObject>
    <fields>
        <fullName>MT_April__c</fullName>
        <label>April</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_August__c</fullName>
        <label>August</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_December__c</fullName>
        <label>Dezember</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_February__c</fullName>
        <label>Februar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_January__c</fullName>
        <label>Januar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_July__c</fullName>
        <label>Juli</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_June__c</fullName>
        <label>Juni</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_March__c</fullName>
        <label>März</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_May__c</fullName>
        <label>Mai</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MediaCampaignType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Media Campaign Type</label>
        <referenceTo>MT_MediaCampaignType__c</referenceTo>
        <relationshipLabel>Media Forecast Values</relationshipLabel>
        <relationshipName>Media_Forecast_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_MediaForecastVersion_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Media Forecast Version</label>
        <referenceTo>MT_ForecastVersion__c</referenceTo>
        <relationshipLabel>Media Forecast Values</relationshipLabel>
        <relationshipName>Media_Forecast_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_November__c</fullName>
        <label>November</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_October__c</fullName>
        <label>Oktober</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_September__c</fullName>
        <label>September</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_Sys_CampaignTypeUnitName__c</fullName>
        <label>Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Media Forecast Value</label>
    <nameField>
        <displayFormat>MFV-{000000}</displayFormat>
        <label>Forecast Value Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Forecast Values</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>